crates/haneul/src/client_ptb/snapshots/haneul__client_ptb__lexer__tests__tokenize_vector.snap
---
source: crates/haneul/src/client_ptb/lexer.rs
expression: lex(vecs)
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 6,
        },
        value: Lexeme(
            Ident,
            "vector",
        ),
    },
    Spanned {
        span: Span {
            start: 6,
            end: 7,
        },
        value: Lexeme(
            LBracket,
            "[",
        ),
    },
    Spanned {
        span: Span {
            start: 7,
            end: 8,
        },
        value: Lexeme(
            Number,
            "1",
        ),
    },
    Spanned {
        span: Span {
            start: 8,
            end: 9,
        },
        value: Lexeme(
            Comma,
            ",",
        ),
    },
    Spanned {
        span: Span {
            start: 9,
            end: 10,
        },
        value: Lexeme(
            Number,
            "2",
        ),
    },
    Spanned {
        span: Span {
            start: 10,
            end: 11,
        },
        value: Lexeme(
            Comma,
            ",",
        ),
    },
    Spanned {
        span: Span {
            start: 11,
            end: 12,
        },
        value: Lexeme(
            Number,
            "3",
        ),
    },
    Spanned {
        span: Span {
            start: 12,
            end: 13,
        },
        value: Lexeme(
            RBracket,
            "]",
        ),
    },
    Spanned {
        span: Span {
            start: 14,
            end: 20,
        },
        value: Lexeme(
            Ident,
            "vector",
        ),
    },
    Spanned {
        span: Span {
            start: 20,
            end: 21,
        },
        value: Lexeme(
            LBracket,
            "[",
        ),
    },
    Spanned {
        span: Span {
            start: 21,
            end: 22,
        },
        value: Lexeme(
            Number,
            "1",
        ),
    },
    Spanned {
        span: Span {
            start: 22,
            end: 23,
        },
        value: Lexeme(
            Comma,
            ",",
        ),
    },
    Spanned {
        span: Span {
            start: 24,
            end: 25,
        },
        value: Lexeme(
            Number,
            "2",
        ),
    },
    Spanned {
        span: Span {
            start: 25,
            end: 26,
        },
        value: Lexeme(
            Comma,
            ",",
        ),
    },
    Spanned {
        span: Span {
            start: 27,
            end: 28,
        },
        value: Lexeme(
            Number,
            "3",
        ),
    },
    Spanned {
        span: Span {
            start: 28,
            end: 29,
        },
        value: Lexeme(
            RBracket,
            "]",
        ),
    },
    Spanned {
        span: Span {
            start: 30,
            end: 36,
        },
        value: Lexeme(
            Ident,
            "vector",
        ),
    },
    Spanned {
        span: Span {
            start: 36,
            end: 37,
        },
        value: Lexeme(
            LBracket,
            "[",
        ),
    },
    Spanned {
        span: Span {
            start: 37,
            end: 38,
        },
        value: Lexeme(
            RBracket,
            "]",
        ),
    },
    Spanned {
        span: Span {
            start: 39,
            end: 45,
        },
        value: Lexeme(
            Ident,
            "vector",
        ),
    },
    Spanned {
        span: Span {
            start: 45,
            end: 46,
        },
        value: Lexeme(
            LBracket,
            "[",
        ),
    },
    Spanned {
        span: Span {
            start: 46,
            end: 47,
        },
        value: Lexeme(
            Number,
            "1",
        ),
    },
    Spanned {
        span: Span {
            start: 47,
            end: 48,
        },
        value: Lexeme(
            RBracket,
            "]",
        ),
    },
    Spanned {
        span: Span {
            start: 49,
            end: 55,
        },
        value: Lexeme(
            Ident,
            "vector",
        ),
    },
    Spanned {
        span: Span {
            start: 55,
            end: 56,
        },
        value: Lexeme(
            LBracket,
            "[",
        ),
    },
    Spanned {
        span: Span {
            start: 56,
            end: 57,
        },
        value: Lexeme(
            Number,
            "1",
        ),
    },
    Spanned {
        span: Span {
            start: 57,
            end: 58,
        },
        value: Lexeme(
            Comma,
            ",",
        ),
    },
    Spanned {
        span: Span {
            start: 58,
            end: 59,
        },
        value: Lexeme(
            RBracket,
            "]",
        ),
    },
    Spanned {
        span: Span {
            start: 59,
            end: 59,
        },
        value: Lexeme(
            Eof,
            "",
        ),
    },
]
