crates/haneul/src/client_ptb/snapshots/haneul__client_ptb__lexer__tests__unexpected_dash.snap
---
source: crates/haneul/src/client_ptb/lexer.rs
expression: tokens
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Lexeme(
            Unexpected,
            "-",
        ),
    },
]
